# CMakeLists.txt
# Copyright (C) orcaer@yeah.net. All rights reserved.
# Last modified: 2020-6-17

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(uv_cpp)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/
    ${PROJECT_SOURCE_DIR}/libuv/include)
GET_DIRECTORY_PROPERTY(hasParent PARENT_DIRECTORY)
IF(hasParent)
    GET_PROPERTY(HEADERS_DIR DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
    SET(UV_CPP_HEADERS_DIR ${HEADERS_DIR} PARENT_SCOPE)
    MESSAGE(STATUS "HUV_CPP_HEADERS_DIR has been set.")
ENDIF()

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/libuv)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/uv  SOURCES)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/uv/http  SOURCES)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11   -O2")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11  -O2")

ADD_LIBRARY (${PROJECT_NAME} STATIC ${SOURCES} )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} uv_a)

